test/should-fail/vsgc892a.f3
/*
 * @test/compile-error
 */

import java.lang.*;
var a = 2;
var c = { return a; }
